--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.0",
     "lodash": "^4.17.20",
     "node-sass": "^5.0.0",
     "vue": "^2.6.11",
-    "vue-axios": "^3.2.4",
+    "vue-click-outside": "^1.1.0",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
